fix(update-exam): fix exception handler and messages, fix service function